--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!doctype html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>Pure CSS Fullscreen Fading Slideshow</title>
+<title>TML-Reception-TV</title>
 <link href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.css" rel="stylesheet" type="text/css">
 <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 <style class="cp-pen-styles">
@@ -63,27 +62,29 @@ body { height: 100%; }
 .slideshow li h3 { font-size: 2em; }
 }
 
-.slideshow li:nth-child(1) span { background-image: url(https://unsplash.it/7200/4800?image=689); }
+.slideshow li:nth-child(1) span { 
+  background-image: url(img_la.jpg); 
+}
 
 .slideshow li:nth-child(2) span {
   background-image: url(img_chicago.jpg);
-  -webkit-animation-delay: 6s;
-  -moz-animation-delay: 6s;
-  animation-delay: 6s;
+  -webkit-animation-delay: 15s;
+  -moz-animation-delay: 15s;
+  animation-delay: 15s;
 }
 
 .slideshow li:nth-child(3) span {
   background-image: url(img_la.jpg);
-  -webkit-animation-delay: 12s;
-  -moz-animation-delay: 12s;
-  animation-delay: 12s;
+  -webkit-animation-delay: 30s;
+  -moz-animation-delay: 30s;
+  animation-delay: 30s;
 }
 
 .slideshow li:nth-child(4) span {
   background-image: url(img_ny.jpg);
-  -webkit-animation-delay: 18s;
-  -moz-animation-delay: 18s;
-  animation-delay: 18s;
+  -webkit-animation-delay: 45s;
+  -moz-animation-delay: 45s;
+  animation-delay: 45s;
 }
  @-webkit-keyframes 
 imageAnimation {  0% {
