--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ body { height: 100%; }
   z-index: 0;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  -webkit-animation: imageAnimation 60s linear infinite 0s;
-  -moz-animation: imageAnimation 60s linear infinite 0s;
-  animation: imageAnimation 60s linear infinite 0s;
+  -webkit-animation: imageAnimation 120s linear infinite 0s;
+  -moz-animation: imageAnimation 120s linear infinite 0s;
+  animation: imageAnimation 120s linear infinite 0s;
 }
 
 .slideshow li h3 {
@@ -46,9 +46,9 @@ body { height: 100%; }
   font-family: 'roboto', sans-serif;
   text-transform: uppercase;
   color: #fff;
-  -webkit-animation: titleAnimation 60s linear 1 0s;
-  -moz-animation: titleAnimation 60s linear 1 0s;
-  animation: titleAnimation 60s linear 1 0s;
+  -webkit-animation: titleAnimation 120s linear 1 0s;
+  -moz-animation: titleAnimation 120s linear 1 0s;
+  animation: titleAnimation 120s linear 1 0s;
 }
 @media only screen and (min-width: 768px) {
 
@@ -67,25 +67,61 @@ body { height: 100%; }
 }
 
 .slideshow li:nth-child(2) span {
-  background-image: url(img_chicago.jpg);
+  background-image: url(1.jpg);
   -webkit-animation-delay: 15s;
   -moz-animation-delay: 15s;
   animation-delay: 15s;
 }
 
 .slideshow li:nth-child(3) span {
-  background-image: url(img_la.jpg);
+  background-image: url(2.jpg);
   -webkit-animation-delay: 30s;
   -moz-animation-delay: 30s;
   animation-delay: 30s;
 }
 
 .slideshow li:nth-child(4) span {
-  background-image: url(img_ny.jpg);
+  background-image: url(3.jpg);
   -webkit-animation-delay: 45s;
   -moz-animation-delay: 45s;
   animation-delay: 45s;
 }
+  
+.slideshow li:nth-child(5) span {
+  background-image: url(5.jpg);
+  -webkit-animation-delay: 60s;
+  -moz-animation-delay: 60s;
+  animation-delay: 60s;
+}
+  
+.slideshow li:nth-child(6) span {
+  background-image: url(6.jpg);
+  -webkit-animation-delay: 75s;
+  -moz-animation-delay: 75s;
+  animation-delay: 75s;
+}
+  
+.slideshow li:nth-child(7) span {
+  background-image: url(7.jpg);
+  -webkit-animation-delay: 90s;
+  -moz-animation-delay: 90s;
+  animation-delay: 90s;
+}
+  
+.slideshow li:nth-child(8) span {
+  background-image: url(8.jpg);
+  -webkit-animation-delay: 105s;
+  -moz-animation-delay: 105s;
+  animation-delay: 105s;
+}
+  
+.slideshow li:nth-child(9) span {
+  background-image: url(9.jpg);
+  -webkit-animation-delay: 120s;
+  -moz-animation-delay: 120s;
+  animation-delay: 120s;
+}
+  
  @-webkit-keyframes 
 imageAnimation {  0% {
  opacity: 0;
