--- a/index.html
+++ b/index.html
@@ -242,11 +242,15 @@ titleAnimation {  0% {
 <body>
 <ul class="slideshow">
   <li>
-    <h3>TML-Reception-TV</h3>
+    <h3>Mia and Mirana</h3>
     <span>Slide One</span> </li>
   <li> <span>Slide Two</span> </li>
   <li> <span>Slide Three</span> </li>
   <li> <span>Slide Four</span> </li>
+  <li> <span>Slide Five</span> </li>
+  <li> <span>Slide Six</span> </li>
+  <li> <span>Slide Seven</span> </li>
+  <li> <span>Slide Eight</span> </li>
 </ul>
 </body>
 </html>
