--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
 <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 <style class="cp-pen-styles">
 html { min-height: 100%; }
-
 body { height: 100%; }
-
 .slideshow {
   list-style: none;
   z-index: 1;
 }
-
 .slideshow li span {
   width: 100%;
   height: 100%;
@@ -33,7 +30,6 @@ body { height: 100%; }
   -moz-animation: imageAnimation 48s linear infinite 0s;
   animation: imageAnimation 48s linear infinite 0s;
 }
-
 .slideshow li h3 {
   position: absolute;
   text-align: center;
@@ -51,35 +47,29 @@ body { height: 100%; }
   animation: titleAnimation 48s linear 1 0s;
 }
 @media only screen and (min-width: 768px) {
-
 .slideshow li h3 {
   bottom: 30px;
   font-size: 2em;
 }
 }
 @media only screen and (min-width: 1024px) {
-
 .slideshow li h3 { font-size: 2em; }
 }
-
 .slideshow li:nth-child(1) span { 
   background-image: url(9.jpg); 
 }
-
 .slideshow li:nth-child(2) span {
   background-image: url(1.jpg);
   -webkit-animation-delay: 6s;
   -moz-animation-delay: 6s;
   animation-delay: 6s;
 }
-
 .slideshow li:nth-child(3) span {
   background-image: url(2.jpg);
   -webkit-animation-delay: 12s;
   -moz-animation-delay: 12s;
   animation-delay: 12s;
 }
-
 .slideshow li:nth-child(4) span {
   background-image: url(3.jpg);
   -webkit-animation-delay: 18s;
@@ -114,6 +104,120 @@ body { height: 100%; }
   -moz-animation-delay: 42s;
   animation-delay: 42s;
 }
+  
+ @-webkit-keyframes 
+imageAnimation {  0% {
+ opacity: 0;
+ -webkit-animation-timing-function: ease-in;
+}
+ 12.5% {
+ opacity: 1;
+ -webkit-animation-timing-function: ease-out;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@-moz-keyframes 
+imageAnimation {  0% {
+ opacity: 0;
+ -moz-animation-timing-function: ease-in;
+}
+ 12.5% {
+ opacity: 1;
+ -moz-animation-timing-function: ease-out;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@keyframes 
+imageAnimation {  0% {
+ opacity: 0;
+ -webkit-animation-timing-function: ease-in;
+ -moz-animation-timing-function: ease-in;
+ animation-timing-function: ease-in;
+}
+ 12.5% {
+ opacity: 1;
+ -webkit-animation-timing-function: ease-out;
+ -moz-animation-timing-function: ease-out;
+ animation-timing-function: ease-out;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@-webkit-keyframes 
+titleAnimation {  0% {
+ opacity: 0;
+}
+ 12.5% {
+ opacity: 1;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@-moz-keyframes 
+titleAnimation {  0% {
+ opacity: 0;
+}
+ 12.5% {
+ opacity: 1;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+@keyframes 
+titleAnimation {  0% {
+ opacity: 0;
+}
+ 12.5% {
+ opacity: 1;
+}
+ 25% {
+ opacity: 1;
+}
+ 37.5% {
+ opacity: 0;
+}
+ 100% {
+ opacity: 0;
+}
+}
+.no-cssanimations .slideshow li span { opacity: 1; }
 </style>
 </head>
 
